[gd_scene load_steps=5 format=3 uid="uid://cuvaxsljlcd3i"]

[ext_resource type="Script" path="res://node_2d.gd" id="1_lqu31"]
[ext_resource type="Texture2D" uid="uid://dpn0m4mldgj7" path="res://assets/background_spritesheet.png" id="2_0j3vf"]
[ext_resource type="Texture2D" uid="uid://1ch8wdwl01u3" path="res://assets/symbols_spritesheet.png" id="3_lkxil"]
[ext_resource type="Texture2D" uid="uid://c6hw6bvf1vale" path="res://assets/modal_spritesheet.png" id="5_nagm4"]

[node name="Game" type="Node2D" node_paths=PackedStringArray("sprite_symbols")]
script = ExtResource("1_lqu31")
game_state = 1
sprite_symbols = NodePath("CursorSprite")

[node name="BackgroundSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_0j3vf")
centered = false
hframes = 3
frame = 2

[node name="PlayingContainer" type="GridContainer" parent="."]
clip_contents = true
layout_direction = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = 36.0
offset_right = 59.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 4
columns = 3

[node name="0" type="ColorRect" parent="PlayingContainer"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(1, 1, 1, 0.109804)

[node name="1" type="ColorRect" parent="PlayingContainer"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(1, 1, 1, 0.109804)

[node name="2" type="ColorRect" parent="PlayingContainer"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(1, 1, 1, 0.109804)

[node name="3" type="ColorRect" parent="PlayingContainer"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(1, 1, 1, 0.109804)

[node name="4" type="ColorRect" parent="PlayingContainer"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(1, 1, 1, 0.109804)

[node name="5" type="ColorRect" parent="PlayingContainer"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(1, 1, 1, 0.109804)

[node name="6" type="ColorRect" parent="PlayingContainer"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(1, 1, 1, 0.109804)

[node name="7" type="ColorRect" parent="PlayingContainer"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(1, 1, 1, 0.109804)

[node name="8" type="ColorRect" parent="PlayingContainer"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(1, 1, 1, 0.109804)

[node name="CursorSprite" type="Sprite2D" parent="."]
position = Vector2(-15, 46)
texture = ExtResource("3_lkxil")
hframes = 2

[node name="SymbolsPlayed" type="Node" parent="."]

[node name="ModalContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="ModalContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 64.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2

[node name="ModalSprite" type="Sprite2D" parent="ModalContainer"]
z_index = 10
position = Vector2(0, 40)
scale = Vector2(1.16667, 1.125)
texture = ExtResource("5_nagm4")
centered = false
hframes = 2

[node name="PlayButton" type="Button" parent="ModalContainer/ModalSprite"]
modulate = Color(1, 1, 1, 0.239216)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.0
offset_top = -4.0
offset_right = 12.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton2" type="Button" parent="ModalContainer/ModalSprite"]
modulate = Color(1, 1, 1, 0.239216)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.0
offset_top = 6.0
offset_right = 12.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="ModalContainer/ModalSprite/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="ModalContainer/ModalSprite/PlayButton2" to="." method="_on_quit_button_pressed"]
